# chat_app

./: chat_app.sublime-project  chat_app.sublime-workspace
backend/: Cargo.toml
backend/src/: chat_service.rs  main.rs  user_service.rs  utils.rs
backend/src/channel_layers/: mod.rs
backend/tests/: chat_service_test.rs
frontend/: Cargo.toml  build.rs
frontend/assets/: tailwind.css
frontend/src/: grpc.rs  main.rs
proto_library/: chat.proto  users.proto
