[package]
name = "frontend"
version = "0.1.0"
authors = ["abdulkuddusa4 <abdulkuddusa4@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
prost = "0.14.3"
tonic = "*"
tonic-prost = "0.14.5"

[features]
default = ["desktop"]
# web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[build-dependencies]
tonic-build = "0.14.3"
tonic-prost-build = "0.14.3"
